--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,1 +1,8 @@
 /* здесь используйте глобальные переменные */
+$primary-font:  "Lato", sans-serif;
+$title-font: "Oswald", sans-serif;
+
+$text-color: #444444;
+$title-color: #000000;
+$primary-bg: #68b738;
+$lighter-primary-bg: rgba($primary-bg, 85%);
