--- a/source/styles/blocks/additional-catalog.scss
+++ b/source/styles/blocks/additional-catalog.scss
@@ -1,4 +1,6 @@
-.additional-catalog {}
+.additional-catalog {
+
+}
 
 .additional-catalog__title {
   @media (max-width: 767px) {
@@ -6,4 +8,6 @@
   }
 }
 
-.additional-catalog__list {}
+.additional-catalog__list {
+
+}
