--- a/source/styles/blocks/additional-card.scss
+++ b/source/styles/blocks/additional-card.scss
@@ -13,6 +13,11 @@
   }
 }
 
-.additional-card__description {}
+/* .additional-card__description {
 
-.additional-card__link {}
+}
+
+.additional-card__link {
+
+}
+*/
