--- a/source/styles/blocks/social.scss
+++ b/source/styles/blocks/social.scss
@@ -2,7 +2,7 @@
   list-style: none;
 }
 
-.social__item {}
+/* .social__item {}
 
 .social__link {}
 
@@ -10,4 +10,4 @@
 
 .social__link--tg {}
 
-.social__link--yt {}
+.social__link--yt {} */
