--- a/source/styles/blocks/actions.scss
+++ b/source/styles/blocks/actions.scss
@@ -2,7 +2,7 @@
 
 .actions__title {
   @media (max-width: 767px) {
-    @include heading-styles(24px);
+    @include heading-styles(24px, 24px);
   }
 }
 
