--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -2,7 +2,7 @@
 
 .catalog__title {
   @media (max-width: 767px) {
-    @include heading-styles(36px);
+    @include heading-styles(36px, 36px);
   }
 }
 
