--- a/source/styles/blocks/program-card.scss
+++ b/source/styles/blocks/program-card.scss
@@ -2,7 +2,7 @@
 
 .program-card__title {
   @media (max-width: 767px) {
-    @include heading-styles(24px);
+    @include heading-styles(24px, 20px);
   }
 }
 
