--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -1,39 +1,48 @@
 .promo {
-  position: relative;
-  font-family: $title-font;
-  font-weight: 400;
-
   @media (max-width: 767px) {
+    min-height: 480px;
+    position: relative;
+    overflow: hidden; // Скрываем возможные артефакты
+
+    // Основной фон (зеленый + белый)
     &::before {
       content: "";
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba($lighter-primary-bg, 0.85); // 50% прозрачности
+      inset: 0;
+      background:
+        linear-gradient(
+          to bottom,
+          rgba($lighter-primary-bg, 0.85) 63%,
+          #ffffff 63%
+        );
       z-index: 1;
     }
-    background-image:
-      image-set(
-        url("../../images/background-index-mobile@1x.jpg") 1x,
-        url("../../images/background-index-mobile@2x.jpg") 2x
-      );
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50% 50%;
-    min-height: 302px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 50%;
+      height: 63%;
+      width: 100%; // Контролируем ширину картинки
+      transform: translateX(-50%);
+      background:
+        image-set(
+          url("../../images/background-index-mobile@1x.jpg") 1x,
+          url("../../images/background-index-mobile@2x.jpg") 2x
+        ) center/cover no-repeat;
+      z-index: 0;
+    }
   }
 }
-
 
 .promo__title {
   @media (max-width: 767px) {
     position: relative;
-    font-weight: 400;
-    font-size: 36px;
+
+    @include heading-styles(36px, 36px);
     color: #ffffff;
-    z-index: 2;
+    z-index: 3;
     text-align: center;
   }
 }
@@ -41,10 +50,11 @@
 .promo__slogan {
   @media (max-width: 767px) {
     position: relative;
-    font-size: 14px;
+
+    @include heading-styles(14px, 14px);
     color: #ffffff;
     text-transform: uppercase;
-    z-index: 2;
+    z-index: 3;
     text-align: center;
   }
 }
@@ -63,11 +73,8 @@
 
 .promo__image {
   @media (max-width: 767px) {
-    position: absolute;
-    top: 100%;  // Сдвигаем вниз на 50% от родителя
-    left: 50%; // Сдвигаем вправо на 50%
-    transform: translate(-50%, -50%); // "Подтягиваем" назад на 50% своей ширины/высоты
+    position: relative;
     z-index: 2;
-    max-width: 80%;
+    max-width: 100%;
   }
 }
