--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,6 +1,6 @@
 /* здесь используйте глобальные переменные */
-$primary-font:  "Lato", sans-serif;
-$title-font: "Oswald", sans-serif;
+$primary-font:  "Lato", "Arial", sans-serif;
+$title-font: "Oswald", "Arial", sans-serif;
 
 $text-color: #444444;
 $title-color: #000000;
