--- a/source/styles/blocks/navigation.scss
+++ b/source/styles/blocks/navigation.scss
@@ -1,4 +1,4 @@
-.navigation {}
+/* .navigation {} */
 
 .navigation__list {
   font-family: $title-font;
@@ -8,11 +8,11 @@
   text-transform: uppercase;
 }
 
-.navigation__item {}
+/* .navigation__item {} */
 
 .navigation__link {
   color: $title-color;
   text-decoration: none;
 }
 
-.navigation__link--active {}
+/* .navigation__link--active {} */
