--- a/source/styles/blocks/stats.scss
+++ b/source/styles/blocks/stats.scss
@@ -1,7 +1,20 @@
-.stats {}
+/* .stats {}
 
-.stats__item {}
+.stats__item {} */
 
-.stats__value {}
+.stats__value {
+  text-transform: uppercase;
 
-.stats__label {}
+  @media (max-width: 767px) {
+    @include heading-styles(24px, 24px);
+  }
+}
+
+.stats__label {
+  margin: 0;
+
+  @media (max-width: 767px) {
+    font-size: 12px;
+    line-height: 100%;
+  }
+}
