--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -38,6 +38,7 @@
 @import "./blocks/button.scss";
 @import "./blocks/main.scss";
 @import "./blocks/main-title.scss";
+@import "./blocks/container.scss";
 
 // Блоки подвала
 @import "./blocks/footer.scss";
