--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -1,5 +1,30 @@
-.contacts {}
+.contacts {
+  display: flex;
+  justify-content: space-between;
 
-.contacts__invite {}
+  @media (max-width: 767px) {
+    padding: 26px 20px;
+  }
+}
 
-.contacts__address {}
+.contacts__invite {
+  font-family: $title-font;
+  text-transform: uppercase;
+  color: #111111;
+  margin: 0;
+
+  @media (max-width: 767px) {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+.contacts__address {
+  margin: 0;
+  color: #444444;
+
+  @media (max-width: 767px) {
+    font-size: 14px;
+    line-height: 20px;
+  }
+}
