--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -1,13 +1,30 @@
-.example {}
-
-.example__title {
+.example {
   @media (max-width: 767px) {
-    @include heading-styles(36px);
+    min-width: 320px;
+    padding: 0 20px;
+    background-color: $second-bg;
   }
 }
 
-.example__main-text {}
+.example__title {
+  @media (max-width: 767px) {
+    @include heading-styles(36px, 40px);
+  }
+}
 
-.example__stats {}
+.example__main-text {
+  @media (max-width: 767px) {
+    line-height: 18px;
+    margin: 0;
+  }
+}
 
-.example__cost {}
+/* .example__stats {} */
+
+.example__cost {
+  text-transform: uppercase;
+
+  @media (max-width: 767px) {
+    @include heading-styles(14px, 20px);
+  }
+}
