--- a/source/styles/blocks/features.scss
+++ b/source/styles/blocks/features.scss
@@ -1,11 +1,20 @@
-.features {}
-
-.features__slogan {
+.features {
   @media (max-width: 767px) {
-    @include heading-styles(36px);
+    min-width: 320px;
+    padding: 0 20px;
   }
 }
 
-.features__list {}
+.features__slogan {
+  @media (max-width: 767px) {
+    @include heading-styles(36px, 40px);
+  }
+}
 
-.features__item {}
+.features__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+/* .features__item {} */
