--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -1,9 +1,13 @@
-.footer {}
+/* .footer {} */
 
-.footer__contacts {}
+.footer__contacts {
+  background-color: $alt-bg;
+}
 
-.footer__map {}
+/* .footer__map {} */
 
-.footer__bottom {}
+.footer__bottom {
+  background-color: $alt-bg;
+}
 
-.footer__logo {}
+/* .footer__logo {} */
