--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -1,7 +1,7 @@
-.main-header {}
+/* .main-header {}
 
 .main-header__logo {}
 
 .main-header__nav {}
 
-.main-header__menu-button {}
+.main-header__menu-button {} */
