--- a/source/styles/blocks/main-title.scss
+++ b/source/styles/blocks/main-title.scss
@@ -1,3 +1,9 @@
-.main-title {}
+.main-title {
+  @media (max-width: 767px) {
+    @include heading-styles(36px, 36px);
+  }
+}
 
-.main-title--dark {}
+.main-title--light {
+  color: $text-light;
+}
