--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -1,7 +1,18 @@
-.programs {}
+.programs {
+  @media (max-width: 767px) {
+    min-width: 320px;
+    padding: 0 20px;
+  }
+}
 
 .programs__list {
   list-style: none;
+  padding-left: 0;
 }
 
-.programs__item {}
+.programs__item {
+  @media (max-width: 767px) {
+    min-height: 266px;
+    margin-bottom: 20px;
+  }
+}
