--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -2,6 +2,7 @@
   @media (max-width: 767px) {
     min-width: 320px;
     padding: 0 20px;
+    padding-bottom: 40px;
     background-color: $second-bg;
   }
 }
@@ -9,22 +10,33 @@
 .example__title {
   @media (max-width: 767px) {
     @include heading-styles(36px, 40px);
+    padding-top: 25px;
+    padding-bottom: 40px;
+  }
+
+  @media (min-width: $tablet) {
+    @include heading-styles(60px, 60px);
+    padding: 45px 30px 60px;
   }
 }
 
 .example__main-text {
+  margin: 0;
+
   @media (max-width: 767px) {
     line-height: 18px;
-    margin: 0;
+    padding-bottom: 20px;
+  }
+
+  @media (min-width: $tablet) {
+    font-size: 16px;
+    line-height: 24px;
+    padding: 0 30px 55px;
   }
 }
 
-/* .example__stats {} */
-
-.example__cost {
-  text-transform: uppercase;
-
-  @media (max-width: 767px) {
-    @include heading-styles(14px, 20px);
-  }
+.example__stats-wrapper {
+  display: flex;
+  gap: 32px;
+  justify-content: center;
 }
