--- a/source/styles/blocks/features-card.scss
+++ b/source/styles/blocks/features-card.scss
@@ -2,6 +2,30 @@
   display: flex;
   align-items: center;
   margin: 0;
+
+
+  @media (min-width: $tablet) {
+    position: relative;
+    min-height: 280px;
+    min-width: 241px;
+
+    @media (max-width: 768.98px) {
+      width: 240px;
+    }
+
+    &::after {
+      content: ""counter(item) "";
+      position: absolute;
+      right: -10px;
+      top: 3%;
+      font-size: 280px;
+      line-height: 280px;
+      font-family: $title-font;
+      color: $alt-bg;
+      width: 136px;
+      height: 280px;
+    }
+  }
 }
 
 .features-card__text {
@@ -10,17 +34,32 @@
   min-height: 60px;
   margin: 0;
 
+  @media (min-width: $tablet) {
+    padding-left: 0;
+    padding-top: 111px;
+    font-size: 16px;
+    line-height: 24px;
+    z-index: 2;
+    min-width: 242px;
+  }
+
   &::before {
     content: "";
     position: absolute;
     left: 0;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 0%;
     width: 60px;
     height: 60px;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: left;
+
+    @media (min-width: $tablet) {
+      transform: translateY(0);
+      width: 80px;
+      height: 80px;
+      top: 0;
+    }
   }
 }
 
