--- a/source/styles/blocks/features.scss
+++ b/source/styles/blocks/features.scss
@@ -2,12 +2,25 @@
   @media (max-width: 767px) {
     min-width: 320px;
     padding: 0 20px;
+    margin-bottom: 49px;
+  }
+
+  @media (min-width: $tablet) {
+    padding: 0 30px 47px;
+    border-bottom: 1px solid #e6e6e6;
   }
 }
 
 .features__slogan {
   @media (max-width: 767px) {
     @include heading-styles(36px, 40px);
+    padding-bottom: 40px;
+  }
+
+  @media (min-width: $tablet) {
+    @include heading-styles(60px, 60px);
+    padding-top: 15px;
+    padding-bottom: 32px;
   }
 }
 
@@ -15,6 +28,20 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  @media (min-width: $tablet) {
+    counter-reset: item 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 37px 137px;
+  }
 }
 
-/* .features__item {} */
+.features__item {
+  @media (min-width: $tablet) {
+    counter-increment: item 1;
+  }
+}
