--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -12,7 +12,10 @@
   background-color: $alt-bg;
 }
 
-/* .footer__map {} */
+.footer__map {
+  width: 100%;
+  object-fit: cover;
+}
 
 .footer__bottom {
   background-color: $alt-bg;
@@ -20,6 +23,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @media (min-width: $tablet) {
+    flex-direction: row;
+    min-height: 147px;
+    justify-content: space-between;
+    padding: 30px;
+  }
 }
 
 .footer__logo {
