--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -39,6 +39,10 @@
       background-blend-mode: overlay; // Опционально: режим смешивания
     }
   }
+
+  @media (min-width: $tablet) {
+    background-color: $text-light;
+  }
 }
 
 .promo__title {
@@ -48,43 +52,78 @@
     z-index: 4;
     text-align: center;
   }
+
+  @media (min-width: $tablet) {
+    padding: 65px 223px 40px 120px;
+  }
 }
 
 .promo__slogan {
+  text-transform: uppercase;
+
   @media (max-width: 767px) {
     padding-bottom: 29px;
     position: relative;
 
     @include heading-styles(14px, 14px);
     color: $text-light;
-    text-transform: uppercase;
     z-index: 4;
     text-align: center;
   }
+
+  @media (min-width: $tablet) {
+    @include heading-styles(20px, 20px);
+    padding: 0 360px 21px 120px;
+  }
 }
 
-.promo__button {
+.promo__image-container {
+  @media (min-width: $tablet) {
+    width: 100%;
+    position: relative;  // Создаем контекст позиционирования
+    display: inline-block;
+  } // Или другой подходящий display
+}
+
+.promo__image {
+  display: block;
+  max-width: 100%;
+  height: auto;
+
   @media (max-width: 767px) {
+    margin: 0 auto;
+    position: relative;
+    z-index: 3;
+  }
+
+  @media (min-width: $tablet) {
+    margin: 0 auto;
+  }
+}
+
+
+.promo__button {
+  text-decoration: none;
+  text-align: center;
+
+  @media (max-width: 767px) {
+    @include button-styles(16px, 20px);
     padding-top: 10px;
     padding-bottom: 10px;
-
-    @include button-styles(16px, 20px);
     position: relative;
-    text-decoration: none;
     z-index: 3;
-    text-align: center;
     display: block;
     width: 280px;
     margin: 0 auto;
   }
-}
 
-.promo__image {
-  @media (max-width: 767px) {
-    display: block;
-    margin: 0 auto;
-    position: relative;
-    z-index: 3;
-    max-width: 100%;
+  @media (min-width: $tablet) {
+    @include button-styles(20px, 26px);
+    position: absolute;
+    left: 120px;
+    top: 29px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    width: 242px;
   }
 }
