--- a/source/styles/blocks/stats.scss
+++ b/source/styles/blocks/stats.scss
@@ -1,20 +1,80 @@
-/* .stats {}
+.stats {
+  @media (min-width: $tablet) {
+    display: flex;
+    padding: 0 30px 99px;
+  }
+}
 
-.stats__item {} */
+.stats__item {
+  position: relative;
+  width: 124px;
+  text-align: center;
+
+  @media (min-width: $tablet) {
+    width: 162px;
+    min-height: 75px;
+  }
+}
 
 .stats__value {
   text-transform: uppercase;
+  border: 1px solid $border-primary;
+  border-radius: 3px;
+
 
   @media (max-width: 767px) {
     @include heading-styles(24px, 24px);
+    padding: 15.5px 20px;
+  }
+
+  @media (min-width: $tablet) {
+    @include heading-styles(30px, 37px);
+    padding: 15px 26px;
   }
 }
 
 .stats__label {
-  margin: 0;
+  z-index: 3;
+  font-size: 14px;
+  color: $text-color;
+
 
   @media (max-width: 767px) {
     font-size: 12px;
     line-height: 100%;
+    width: 80px;
+    margin-top: -10px;
+    margin-left: 20px;
+    background: $second-bg;
+  }
+
+  @media (min-width: $tablet) {
+    font-size: 14px;
+    line-height: 100%;
+    width: fit-content;
+    white-space: nowrap;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    margin-top: -9px;
+    background: $text-light;
+    padding: 0 5px;
+  }
+}
+
+.stats__cost {
+  text-transform: uppercase;
+
+  @media (max-width: 767px) {
+    @include heading-styles(14px, 20px);
+    padding-top: 34px;
+    padding-bottom: 20px;
+    text-align: center;
+  }
+
+  @media (min-width: $tablet) {
+    @include heading-styles(20px, 29px);
+    max-width: 174px;
+    margin-left: auto;
+    text-align: right;
   }
 }
