--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -4,11 +4,23 @@
 
   @media (max-width: 767px) {
     padding: 26px 20px;
+    gap: 22px;
   }
 
   @media (min-width: $tablet) {
     padding: 60px 70px;
     gap: 308px;
+  }
+
+  @media (min-width: $desktop) {
+    grid-area: row2-start / 1; /* Размещаем строго во втором ряду */
+    place-self: center start; /* Выравнивание по левому краю */
+    margin-left: 8%;
+    z-index: 2;
+    background: #ffffff;
+    padding: 60px 78px 60px 80px;
+    max-width: 565px;
+    gap: 87px;
   }
 }
 
