--- a/source/styles/blocks/copyright.scss
+++ b/source/styles/blocks/copyright.scss
@@ -11,6 +11,25 @@
   font-size: 16px;
   line-height: 20px;
 
+  &:hover,
+  &:focus {
+    color: #68b738;
+
+    &::after {
+      background-color: #68b738;
+    }
+  }
+
+  &:active {
+    color: #68b738;
+    opacity: 0.3;
+
+    &::after {
+      background-color: #68b738;
+      opacity: 0.3;
+    }
+  }
+
 
   &::after {
     content: "";
