--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -5,6 +5,34 @@
     padding-bottom: 40px;
     background-color: $second-bg;
   }
+
+  @media (min-width: $desktop) {
+    padding: 0;
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    background: $second-bg;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 136px; // Фиксированная высота верхнего цвета
+      background: $text-light; // Верхний цвет
+      z-index: 0;
+    }
+  }
+
+  .container {
+    @media (min-width: $desktop) {
+      margin: 0;
+      width: 50%;
+      padding: 0 110px;
+      position: relative;
+    }
+  }
 }
 
 .example__title {
@@ -17,6 +45,11 @@
   @media (min-width: $tablet) {
     @include heading-styles(60px, 60px);
     padding: 45px 30px 60px;
+  }
+
+  @media (min-width: $desktop) {
+    z-index: 2;
+    padding: 0 10px 76px 0;
   }
 }
 
@@ -33,10 +66,17 @@
     line-height: 24px;
     padding: 0 30px 55px;
   }
+
+  @media (min-width: $desktop) {
+    padding: 70px 10px 69px 0;
+    margin: 0;
+    max-width: 436px;
+  }
 }
 
 .example__stats-wrapper {
   display: flex;
+  flex-wrap: wrap;
   gap: 32px;
-  justify-content: center;
+  justify-content: left;
 }
