--- a/source/styles/blocks/features-card.scss
+++ b/source/styles/blocks/features-card.scss
@@ -9,8 +9,8 @@
     min-height: 280px;
     min-width: 241px;
 
-    @media (max-width: 768.98px) {
-      width: 240px;
+    @media (max-width: 770px) {
+      min-width: 240px;
     }
 
     &::after {
@@ -25,6 +25,11 @@
       width: 136px;
       height: 280px;
     }
+  }
+
+  @media (min-width: $desktop) {
+    width: min-content;
+    min-height: 280px;
   }
 }
 
@@ -64,18 +69,18 @@
 }
 
 // Индивидуальные иконки для каждой карточки
-.features-card:nth-of-type(1) .features-card__text::before {
+.features-card--useful .features-card__text::before {
   background-image: url("../../icons/stack.svg#leaf");
 }
 
-.features-card:nth-of-type(2) .features-card__text::before {
+.features-card--powder .features-card__text::before {
   background-image: url("../../icons/stack.svg#powder");
 }
 
-.features-card:nth-of-type(3) .features-card__text::before {
+.features-card--change .features-card__text::before {
   background-image: url("../../icons/stack.svg#fork-knife");
 }
 
-.features-card:nth-of-type(4) .features-card__text::before {
+.features-card--result .features-card__text::before {
   background-image: url("../../icons/stack.svg#clock");
 }
