--- a/source/styles/blocks/features.scss
+++ b/source/styles/blocks/features.scss
@@ -9,6 +9,11 @@
     padding: 0 30px 47px;
     border-bottom: 1px solid #e6e6e6;
   }
+
+  @media (min-width: $desktop) {
+    padding: 0 110px 69px;
+    border: none;
+  }
 }
 
 .features__slogan {
@@ -20,6 +25,12 @@
   @media (min-width: $tablet) {
     @include heading-styles(60px, 60px);
     padding-top: 15px;
+    padding-bottom: 32px;
+  }
+
+  @media (min-width: $desktop) {
+    @include heading-styles(60px, 60px);
+    padding-top: 0;
     padding-bottom: 32px;
   }
 }
@@ -37,6 +48,13 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 37px 137px;
+  }
+
+  @media (min-width: $desktop) {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: start;
+    gap: 84px;
   }
 }
 
