--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -12,14 +12,33 @@
   background-color: $alt-bg;
 }
 
+.footer__grid {
+  @media (min-width: $desktop) {
+    display: grid;
+    grid-template-rows: [row1-start] auto [row2-start] auto [row3-start] auto [row-end];
+    grid-template-areas:
+      "top"
+      "middle"
+      "bottom";
+    min-height: 400px;
+  }
+}
+
 .footer__map {
   width: 100%;
   object-fit: cover;
+
+  @media (min-width: $desktop) {
+    grid-area: top / 1 / row-end / 1; /* Растягиваем на все 3 ряда */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 .footer__bottom {
   background-color: $alt-bg;
-  padding: 20px;
+  padding: 40px 20px 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,17 +49,59 @@
     justify-content: space-between;
     padding: 30px;
   }
+
+  @media (min-width: $desktop) {
+    min-height: 169px;
+    padding: 66px 110px;
+  }
+}
+
+.footer__logo-img {
+  opacity: 0;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
 }
 
 .footer__logo {
+  display: inline-block;
+  position: relative;
+  width: 128px;
+  height: 24px;
+
   @media (max-width: 767px) {
-    width: 100%;
+    width: 128px;
     padding-top: 20px;
     padding-bottom: 20px;
     display: flex;
     justify-content: center;
   }
+
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 128px;
+    height: 24px;
+    background-color: #111111; /* Исходный цвет */
+    mask-image: url("../../images/logo-text.svg");
+    mask-repeat: no-repeat;
+    mask-size: 128px 24px;
+    transition: background-color 0.3s ease;
+  }
+
+  &:hover::after,
+  &:focus::after {
+    background-color: #3e3e3e;
+  }
+
+  &:active::after {
+    background-color: #6b6b6b;
+  }
 }
+
 
 .footer__social {
   @media (max-width: 767px) {
