--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -1,7 +1,7 @@
 .main-header {
   min-width: 320px;
   position: relative;
-  min-height: 87px;
+  min-height: 65px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -9,6 +9,63 @@
 
   @media (min-width: $tablet) {
     padding: 25px 34px 0 30px;
+  }
+
+  @media (min-width: $desktop) {
+    display: grid;
+    grid-template-columns: 51% auto;
+    width: 100%;
+    height: auto;
+    min-height: 59px;
+    padding: 55px 110px 0;
+    position: relative;
+    overflow: hidden;
+    background-color: $text-light;
+  }
+}
+
+.main-header--index {
+  @media (min-width: $desktop) {
+    background-color: $text-light;
+
+    &::before { // Добавляем новый псевдоэлемент для фона
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 100%;
+      width: 50%;
+      background-color: #505155;
+      z-index: 0;
+    }
+
+    // Верхний слой (зеленый градиент + белый)
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background:
+        linear-gradient(
+          to left,
+          rgba($lighter-primary-bg, 0.85) 50%,
+          $text-light 50%
+        );
+      z-index: 2;
+    }
+  }
+
+  @media (min-width: $desktop) {
+    display: grid;
+    grid-template-columns: 51% auto;
+    width: 100%;
+    height: auto;
+    min-height: 59px;
+    padding: 55px 110px 0;
+    position: relative;
+    overflow: hidden;
   }
 }
 
@@ -75,6 +132,12 @@
       background-image: url("../../images/logo-text.svg");
     }
   }
+
+  @media (min-width: $desktop) {
+    z-index: 5;
+    width: 202px;
+    height: 59px;
+  }
 }
 
 .main-header__logo:hover {
@@ -94,7 +157,7 @@
 
 .main-header__nav {
   position: absolute;
-  top: 87px;
+  top: 65px;
   left: 0;
   width: 100%;
   background: $text-light;
@@ -113,6 +176,13 @@
     opacity: 1;
     visibility: visible;
   }
+
+  @media (min-width: $desktop) {
+    width: 100%;
+    height: auto;
+    opacity: 1;
+    visibility: visible;
+  }
 }
 
 
@@ -125,6 +195,7 @@
 .no-js.main-header {
   @media (max-width: 767px) {
     display: block;
+    padding: 13px 0 0;
   }
 }
 
@@ -140,5 +211,20 @@
     max-height: none;
     opacity: 1;
     visibility: visible;
+  }
+}
+
+.no-js.main-header__logo {
+  @media (max-width: 767px) {
+    &::after {
+      top: -115%;
+      left: 105px;
+    }
+  }
+}
+
+.no-js.logo__img {
+  @media (max-width: 767px) {
+    margin: 0 0 15px 20px;
   }
 }
