--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -8,11 +8,23 @@
     min-width: 708px;
     padding: 0 30px;
   }
+
+  @media (min-width: $desktop) {
+    min-width: 1220px;
+    padding: 82px 110px 71px;
+  }
 }
 
 .programs__list {
   list-style: none;
   padding-left: 0;
+
+  @media (min-width: $desktop) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 80px;
+  }
 }
 
 .programs__item {
