--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -11,14 +11,14 @@
     &::before {
       content: "";
       position: absolute;
-      inset: 0; // Заполняет весь родительский блок
+      inset: 0;
       background:
         linear-gradient(
           to bottom,
-          rgba($lighter-primary-bg, 0.85) 63%,
-          $text-light 63%
+          rgba($lighter-primary-bg, 0.85) 60%,
+          $text-light 60%
         );
-      z-index: 2; // Находится поверх других слоев
+      z-index: 2;
     }
 
     // Нижний слой (картинка)
@@ -27,21 +27,55 @@
       position: absolute;
       top: 0;
       left: 0;
-      height: 63%; // Соответствует зеленой части верхнего слоя
+      height: 60%; // Соответствует зеленой части верхнего слоя
       width: 100%;
       background:
-        /* Картинка (центрированная с сохранением пропорций)*/
         image-set(
           url("../../images/background-index-mobile@1x.jpg") 1x,
           url("../../images/background-index-mobile@2x.jpg") 2x
-        ) center/contain no-repeat;
-      z-index: 1; // Находится под верхним слоем
-      background-blend-mode: overlay; // Опционально: режим смешивания
+        ) 50% 0/contain no-repeat;
+      z-index: 1;
+      background-blend-mode: overlay;
     }
   }
 
   @media (min-width: $tablet) {
     background-color: $text-light;
+  }
+
+  @media (min-width: $desktop) {
+    padding: 0;
+    min-height: 580px;
+    height: auto;
+    position: relative;
+    overflow: hidden;
+    background-color: $text-light;
+    text-align: left;
+
+    &::before { // Добавляем новый псевдоэлемент для фона
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 100%;
+      width: 50%;
+      background-color: #505155;
+      z-index: 0;
+    }
+
+    // Верхний слой (зеленый градиент + белый)
+    &::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background:
+        linear-gradient(
+          to left,
+          rgba($lighter-primary-bg, 0.85) 50%,
+          $text-light 50%
+        );
+      z-index: 2;
+    }
   }
 }
 
@@ -55,6 +89,16 @@
 
   @media (min-width: $tablet) {
     padding: 65px 223px 40px 120px;
+  }
+
+  @media (min-width: $desktop) {
+    padding: 110px 10px 40px 190px;
+    z-index: 4;
+    position: relative;
+    text-align: left;
+    width: 50%;
+    max-width: 624px;
+    left: 0;
   }
 }
 
@@ -75,14 +119,32 @@
     @include heading-styles(20px, 20px);
     padding: 0 360px 21px 120px;
   }
+
+  @media (min-width: $desktop) {
+    padding: 0 10px 52px 190px;
+
+    @include heading-styles(20px, 20px);
+    color: $text-color;
+    z-index: 4;
+    position: relative;
+    text-align: left;
+    width: 50%;
+    max-width: 500px;
+    left: 0;
+  }
 }
 
 .promo__image-container {
   @media (min-width: $tablet) {
     width: 100%;
-    position: relative;  // Создаем контекст позиционирования
+    position: relative;
     display: inline-block;
-  } // Или другой подходящий display
+  }
+
+  @media (min-width: $desktop) {
+    position: static;
+    display: block;
+  }
 }
 
 .promo__image {
@@ -98,6 +160,19 @@
 
   @media (min-width: $tablet) {
     margin: 0 auto;
+  }
+
+  @media (min-width: $desktop) {
+
+    position: absolute;
+    z-index: 3;
+    right: 23%;
+    top: 35%;
+    transform: translateY(-35%);
+    max-width: 552px;
+    height: auto;
+    margin: 0;
+    min-height: 300px;
   }
 }
 
@@ -125,5 +200,18 @@
     padding-top: 14px;
     padding-bottom: 14px;
     width: 242px;
+  }
+
+  @media (min-width: $desktop) {
+    @include button-styles(20px, 26px);
+    width: 244px;
+    min-height: 54px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    position: relative;
+    z-index: 3;
+    display: block;
+    margin-bottom: 32px;
+    left: 190px;
   }
 }
