--- a/source/styles/blocks/slider-container.scss
+++ b/source/styles/blocks/slider-container.scss
@@ -1,6 +1,13 @@
 .slider-container {
   @media (min-width: $tablet) {
-    background: linear-gradient(to bottom, $text-light 30%, $second-bg 30%);
+    background: transparent;
     padding-bottom: 101px;
+  }
+
+  @media (min-width: $desktop) {
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 1;
   }
 }
