--- a/source/styles/blocks/social.scss
+++ b/source/styles/blocks/social.scss
@@ -21,22 +21,77 @@
   display: inline-block;
   width: 28px;
   height: 22px;
-  background-color: #666666;
-  mask-position: center;
-  mask-repeat: no-repeat;
-}
+  position: relative;
 
-.social__link--vk {
-  mask-image: url("../../icons/stack.svg#vk-icon");
-  mask-size: contain;
-}
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #666666;
+    mask-position: center;
+    mask-repeat: no-repeat;
+  }
 
+  &--vk::before {
+    mask-image: url("../../icons/stack.svg#vk-icon");
+    mask-size: contain;
+  }
+
+  &--yt::before {
+    mask-image: url("../../icons/stack.svg#ytube-icon");
+    mask-size: contain;
+  }
+
+  &--tg::before {
+    mask-image: url("../../icons/stack.svg#telegram-icon");
+    mask-size: contain;
+  }
+
+  &:hover::before,
+  &:focus::before {
+    background-color: #68b738;
+  }
+
+  &:active::before {
+    background-color: #68b738;
+    opacity: 0.3;
+  }
+
+  &:focus-visible {
+    outline: 2px solid #111111;
+    outline-offset: 2px;
+  }
+}
+/*
 .social__link--yt {
   mask-image: url("../../icons/stack.svg#ytube-icon");
   mask-size: contain;
-}
 
-.social__link--tg {
+  &:hover,
+  &:focus {
+    background-color: #68b738;
+  }
+
+  &:active {
+    background-color: #68b738;
+    opacity: 0.3;
+  }
+} */
+
+/* .social__link--tg {
   mask-image: url("../../icons/stack.svg#telegram-icon");
   mask-size: contain;
-}
+
+  &:hover,
+  &:focus {
+    background-color: #68b738;
+  }
+
+  &:active {
+    background-color: #68b738;
+    opacity: 0.3;
+  }
+} */
