--- a/source/styles/blocks/catalog-card.scss
+++ b/source/styles/blocks/catalog-card.scss
@@ -1,9 +1,110 @@
 .catalog-card {
   display: flex;
+  flex-direction: column;
+  height: 100%;
+
 
   @media (max-width: 767px) {
     padding: 20px 20px 25px;
-    flex-direction: column;
+    min-height: 209px;
+    border-bottom: 1px solid #ebebeb;
+  }
+
+  @media (min-width: $tablet) {
+    width: 324px;
+    padding: 10px 25px 40px;
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 90px;
+      background-color: #ffffff;
+      z-index: -1;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 90px;
+      left: 0;
+      width: 100%;
+      bottom: 0;
+      background-color: $alt-bg;
+      z-index: -1;
+    }
+  }
+
+  @media (min-width: $desktop) {
+    width: 245px;
+    padding: 10px 38px 40px;
+  }
+}
+
+.catalog-card--show-all {
+  position: relative;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+  @media (min-width: $tablet) {
+    width: 324px;
+    padding: 10px 25px 40px;
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 90px;
+      background-color: #ffffff;
+      z-index: -1;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 90px;
+      left: 0;
+      width: 100%;
+      bottom: 0;
+      border: solid 1px $alt-bg;
+      background: none;
+      z-index: -1;
+    }
+  }
+
+  @media (min-width: $desktop) {
+    width: 245px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 81px;
+      background-color: #ffffff;
+      z-index: -1;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 90px;
+      left: 0;
+      width: 100%;
+      bottom: 0;
+      border: solid 1px $alt-bg;
+      background: none;
+      z-index: -1;
+    }
   }
 }
 
@@ -12,6 +113,27 @@
     display: grid;
     grid-template-columns: 1fr 1fr;  /* Два равных столбца */
     grid-template-rows: auto auto;
+    padding-bottom: 21px;
+  }
+
+  @media (min-width: $tablet) {
+    flex: 1 1 auto; // Растягивается, занимая все доступное пространство
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
+    padding-bottom: 32px;
+  }
+}
+
+.catalog-card__wrapper--show-all {
+  @media (min-width: $tablet) {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; // Центрируем по вертикали
+    align-items: center; // Центрируем по горизонтали
+    padding: 180px 20px 20px;
+    margin-bottom: auto;
   }
 }
 
@@ -24,19 +146,37 @@
 }
 
 .catalog-card__button {
+  @include button-styles(16px, 20px);
   text-decoration: none;
   text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
 
-  @media (max-width: 767px) {
-    @include button-styles(16px, 20px);
-    padding-top: 10px;
-    padding-bottom: 10px;
+  @media (min-width: $tablet) {
+    margin-top: auto; // Прижимаем к низу
+    align-self: center; // Центрируем по горизонтали
+    width: 100%;      // Или нужная вам ширина
   }
 }
 
 .catalog-card__link--image {
   @media (max-width: 767px) {
     grid-row: span 2;
+  }
+
+  @media (min-width: $tablet) {
+    width: 100%;
+    grid-row: span 2;
+    text-align: center;
+    padding-left: 34px;
+    padding-right: 34px;
+  }
+
+  @media (min-width: $desktop) {
+    width: 100%;
+    grid-row: span 2;
+    text-align: center;
+    padding: 0;
   }
 }
 
@@ -46,10 +186,44 @@
   color: #222222;
   text-transform: uppercase;
   margin: 0;
+  font-size: 16px;
+  line-height: 20px;
+  max-width: 76px;
+
+
+  @media (min-width: $tablet) {
+    font-size: 20px;
+    line-height: 24px;
+    padding: 22px 5px 20px;
+    max-width: 150px;
+    margin: 0 auto;
+    text-align: center;
+  }
+}
+
+.catalog-card__title--show-all {
+  font-family: $title-font;
+  font-weight: 400;
+  color: #222222;
+  text-transform: uppercase;
+  margin: 0;
+  font-size: 16px;
+  line-height: 20px;
 
   @media (max-width: 767px) {
     font-size: 16px;
     line-height: 20px;
+    max-width: 214px;
+    margin: 0 auto;
+    padding: 78px 5px 8px;
+  }
+
+  @media (min-width: $tablet) {
+    font-size: 20px;
+    line-height: 24px;
+    max-width: 134px;
+    padding-top: 23px;
+    padding-bottom: 23px;
   }
 }
 
@@ -69,14 +243,54 @@
   justify-content: space-between;
   align-items: baseline;
   line-height: 16px;
+
+  @media (min-width: $tablet) {
+    font-size: 16px;
+    line-height: 20px;
+    border-bottom: 1px solid #cdcdcd;
+    padding: 4px 0;
+  }
 }
 
 /* .catalog-card__key {}
 
-.catalog-card__value {}
+.catalog-card__value {} */
 
-.catalog-card__description {} */
+.catalog-card__description {
+  margin: 0;
+  padding-bottom: 21px;
 
-.catalog-card--show-all {
+  @media (min-height: $tablet) {
+    font-size: 16px;
+    line-height: 20px;
+    max-width: 170px;
+  }
+}
+
+
+.catalog-card__decorate {
+  position: absolute;
+  display: block;
+  width: 30px;
+  top: 39px;
+  height: 2px;
+  background-color: #d3d3d3;
   text-align: center;
+  z-index: 1;
+
+  @media (min-width: $tablet) {
+    width: 60px;
+    top: 162px;
+  }
+}
+
+
+.catalog-card__decorate--first {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.catalog-card__decorate--second {
+  left: 50%;
+  transform: translateX(-50%) rotate(90deg);
 }
