--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -2,6 +2,7 @@
   @media (max-width: 767px) {
     border-bottom: 1px solid #ebebeb;
   }
+  width: 100%;
 }
 
 .catalog__title {
@@ -12,12 +13,50 @@
     border-top: 1px solid #d9d9d9;
     border-bottom: 1px solid #ebebeb;
   }
+
+  @media (min-width: $tablet) {
+    border: none;
+    padding: 29px 30px 84px;
+  }
+
+  @media (min-width: $desktop) {
+    padding: 74px 110px 84px;
+  }
 }
 
 .catalog__list {
   list-style: none;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
+
+  @media (min-width: $tablet) {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(324px, 1fr));
+    align-items: stretch;
+    margin: 0 auto;
+    gap: 60px;
+    padding: 0 30px 74px;
+  }
+
+  @media (min-width: $desktop) {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(245px, 1fr));
+    padding: 0 110px 71px;
+    align-items: stretch;
+    margin: 0 auto;
+    gap: 80px;
+  }
 }
 
-/* .catalog__item {} */
+.catalog__item {
+  margin: 0 auto;
+}
+
+.catalog__desktop-wrapper {
+  @media (min-width: $desktop) {
+    display: grid;
+    grid-template-columns: 1fr 354px;
+    grid-template-rows: auto 1fr;
+    row-gap: 0;
+  }
+}
