--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -1,6 +1,35 @@
 .subscribe {
-  margin: 0 auto;
   padding: 0 20px 40px;
+  width: 100%;
+  margin: 0 auto;
+
+  @media (min-width: $tablet) {
+    padding: 0 68px 80px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  @media (min-width: $desktop) {
+    padding: 0 110px 104px;
+  }
+}
+
+.subscribe__text-title {
+  @media (max-width: 767px) {
+    @include heading-styles(24px, 24px);
+    padding-block: 40px 32px;
+  }
+
+  @media (min-width: $tablet) {
+    padding: 0 0 66px;
+
+    @include heading-styles(32px, 32px);
+    border: none;
+  }
+
+  @media (min-width: $desktop) {
+    padding: 96px 0 72px;
+  }
 }
 
 .subscribe__text {
@@ -8,6 +37,18 @@
     @include heading-styles (16px, 24px);
     text-align: center;
     padding-bottom: 24px;
+  }
+
+  @media (min-width: $tablet) {
+    @include heading-styles(24px, 32px);
+    text-align: center;
+    max-width: 632px;
+    padding-bottom: 24px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: $desktop) {
+    max-width: 1000px;
   }
 }
 
