--- a/source/styles/blocks/additional-card.scss
+++ b/source/styles/blocks/additional-card.scss
@@ -2,17 +2,17 @@
   @media (max-width: 767px) {
     display: flex;
     flex-direction: column;
-    padding-top: 13px;
-    padding-bottom: 19px;
+    padding-top: 7px;
+    padding-bottom: 16px;
     border-bottom: 1px solid $border-primary;
   }
 
   @media (min-width: $tablet) {
-    padding: 26px 38px 28px;
+    padding: 24px 38px 27px;
     display: grid;
     grid-template-columns: 30% 70%;
     grid-template-rows: auto auto; // 2 строки
-    row-gap: 25px;
+    row-gap: 0;
     border-bottom: 1px solid #cdcdcd;
   }
 
@@ -23,8 +23,8 @@
     grid-template-columns: 285px 131px 1fr 244px; // Соотношение колонок
     align-items: center;
     gap: 0 40px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 16px;
+    padding-bottom: 16px;
   }
 }
 
@@ -37,7 +37,7 @@
   @media (min-width: $tablet) {
     display: flex;
     justify-content: end;
-    gap: 49px;
+    gap: 55px;
     grid-column: 2;
   }
 
@@ -52,6 +52,7 @@
   color: $title-color-alt;
   text-transform: uppercase;
   margin: 0;
+  padding-top: 1px;
 
   @media (max-width: 767px) {
     font-size: 16px;
@@ -70,6 +71,10 @@
 }
 
 .additional-card__description {
+  margin: 0;
+  padding-top: 10px;
+  padding-bottom: 17px;
+
   @media (max-width: 767px) {
     line-height: 14px;
   }
@@ -78,9 +83,13 @@
     font-size: 16px;
     line-height: 20px;
     margin: 0;
+    padding-top: 7px;
+    padding-bottom: 20px;
   }
 
   @media (min-width: $desktop) {
+    padding-bottom: 2px;
+
     &:first-of-type {
       grid-column: 2; // Вторая колонка (описание)
       text-align: left;
