--- a/source/styles/blocks/actions.scss
+++ b/source/styles/blocks/actions.scss
@@ -8,7 +8,7 @@
 
   @media (min-width: $tablet) {
     flex-direction: column;
-    padding: 0 30px 70px;
+    padding: 0 30px 81px;
     width: 100%;
     margin: 0 auto;
   }
@@ -30,8 +30,8 @@
         rgba($lighter-primary-bg, 0.85)
       ),
       image-set(
-        url("../../images/background-catalog-action-mobile@1x.jpg") 1x,
-        url("../../images/background-catalog-action-mobile@2x.jpg") 2x
+        url("../../images/background-catalog-action-mobile@1x.webp") 1x,
+        url("../../images/background-catalog-action-mobile@2x.webp") 2x
       ) center/contain no-repeat,
       #8a8a8a;
   }
@@ -39,14 +39,15 @@
   @media (min-width: $tablet) {
     min-width: 707px;
     min-height: 200px;
+    padding: 57px;
     background:
       linear-gradient(
         rgba($lighter-primary-bg, 0.85),
         rgba($lighter-primary-bg, 0.85)
       ),
       image-set(
-        url("../../images/background-catalog-action-tablet@1x.jpg") 1x,
-        url("../../images/background-catalog-action-tablet@2x.jpg") 2x
+        url("../../images/background-catalog-action-tablet@1x.webp") 1x,
+        url("../../images/background-catalog-action-tablet@2x.webp") 2x
       ) center/contain no-repeat,
       #8a8a8a;
   }
@@ -54,64 +55,71 @@
   @media (min-width: $desktop) {
     min-width: 245px;
     min-height: 288px;
-    margin-top: 108px;
+    margin-top: 122px;
+    padding: 0;
     background:
       linear-gradient(
         rgba($lighter-primary-bg, 0.85),
         rgba($lighter-primary-bg, 0.85)
       ),
       image-set(
-        url("../../images/background-catalog-action-desktop@1x.jpg") 1x,
-        url("../../images/background-catalog-action-desktop@2x.jpg") 2x
+        url("../../images/background-catalog-action-desktop@1x.webp") 1x,
+        url("../../images/background-catalog-action-desktop@2x.webp") 2x
       ) center/contain no-repeat,
       #8a8a8a;
   }
 }
 
 .actions__description {
-  position: relative;
-  margin: 0;
+  font-size: 16px;
+  line-height: 20px;
+  display: flex;
+  flex-direction: column;
   text-align: center;
   color: $text-light;
-  padding: 187px 61px 43px 58px;
+  margin: 36px 0 0;
+  gap: 32px;
 
   @media (min-width: $tablet) {
-    padding: 0;
-    max-width: 161px;
-    left: 421px;
-    top: 71px;
+    flex-direction: row;
+    padding: 5px 0 0 21px;
+    text-align: start;
+    justify-content: start;
+    align-items: center;
+    margin: 0;
+    gap: 263px;
   }
 
   @media (min-width: $desktop) {
     padding: 0;
-    max-width: 161px;
-    left: 15%;
-    top: 68%;
+    flex-direction: column;
+    gap: 48px;
+    text-align: center;
+    margin: 0;
+    padding-top: 54px;
   }
 
   &::before {
     content: "";
-    position: absolute;
-
+    display: block;
+    padding: 0 0 122px;
     background-image: url("../../icons/stack.svg#gift-icon");
     background-repeat: no-repeat;
     background-position: center;
-    width: 80px;
     height: 83px;
 
     @media (max-width: 767px) {
       background-size: 78px 80px;
-      top: 20%;
     }
 
     @media (min-width: $tablet) {
-      top: -22%;
-      right: 421px;
+      background-size: 78px 80px;
+      width: 80px;
+      padding: 0;
     }
 
     @media (min-width: $desktop) {
-      top: -275%;
-      right: 20%;
+      background-size: 80px 83px;
     }
   }
 }
