--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -1,14 +1,20 @@
 .catalog {
+  width: 100%;
+
   @media (max-width: 767px) {
     border-bottom: 1px solid #ebebeb;
   }
-  width: 100%;
+
+  @media (min-width: $desktop) {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
 }
 
 .catalog__title {
   @media (max-width: 767px) {
-    padding-top: 27px;
-    padding-bottom: 41px;
+    padding-top: 26px;
+    padding-bottom: 40px;
     padding-left: 20px;
     border-top: 1px solid #d9d9d9;
     border-bottom: 1px solid #ebebeb;
@@ -16,7 +22,7 @@
 
   @media (min-width: $tablet) {
     border: none;
-    padding: 29px 30px 84px;
+    padding: 62px 30px 84px;
   }
 
   @media (min-width: $desktop) {
@@ -44,7 +50,7 @@
     padding: 0 110px 71px;
     align-items: stretch;
     margin: 0 auto;
-    gap: 80px;
+    gap: 65px 80px;
   }
 }
 
@@ -52,11 +58,13 @@
   margin: 0 auto;
 }
 
-.catalog__desktop-wrapper {
+.catalog-desktop-wrapper {
   @media (min-width: $desktop) {
     display: grid;
     grid-template-columns: 1fr 354px;
     grid-template-rows: auto 1fr;
-    row-gap: 0;
+    gap: 0 10px;
+    max-width: 1440px;
+    margin: 0 auto;
   }
 }
