--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -3,22 +3,23 @@
   justify-content: space-between;
 
   @media (max-width: 767px) {
-    padding: 26px 20px;
-    gap: 22px;
+    padding: 16px 15px;
+    gap: 12px;
   }
 
   @media (min-width: $tablet) {
-    padding: 60px 70px;
+    padding: 50px 68px 49px 65px;
     gap: 308px;
   }
 
   @media (min-width: $desktop) {
     grid-area: row2-start / 1; /* Размещаем строго во втором ряду */
     place-self: center start; /* Выравнивание по левому краю */
-    margin-left: 8%;
+    margin-left: 7.5%;
+    margin-bottom: 1%;
     z-index: 2;
     background: #ffffff;
-    padding: 60px 78px 60px 80px;
+    padding: 50px 75px;
     max-width: 565px;
     gap: 87px;
   }
@@ -30,6 +31,8 @@
   color: #111111;
   margin: 0;
   min-width: 60px;
+  max-width: 164px;
+  padding: 10px 5px;
 
   @media (max-width: 767px) {
     font-size: 16px;
@@ -41,16 +44,22 @@
     line-height: 26px;
     text-align: left;
   }
+
+  @media (min-width: $desktop) {
+    padding: 11px 7px;
+  }
 }
 
 .contacts__address {
   margin: 0;
   color: #444444;
   min-width: 60px;
+  padding: 10px 2px;
 
   @media (max-width: 767px) {
     font-size: 14px;
     line-height: 20px;
+    max-width: 150px;
   }
 
   @media (min-width: $tablet) {
@@ -59,10 +68,16 @@
     text-align: right;
   }
 
+  @media (min-width: $desktop) {
+    text-align: left;
+    padding: 12px 1px 9px 5px;
+  }
+
   span {
     @media (min-width: $tablet) {
       display: inline-block;
       padding-top: 20px;
+      max-width: 147px;
     }
   }
 }
