--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -28,9 +28,29 @@
   .container {
     @media (min-width: $desktop) {
       margin: 0;
-      width: 50%;
-      padding: 0 110px;
       position: relative;
+      max-width: 442px;
+    }
+  }
+}
+
+.example__wrapper {
+  @media (min-width: $desktop) {
+    max-width: 1440px;
+    margin: 0 auto;
+    display: flex;
+    position: relative;
+    min-height: 500px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      width: calc(50% - 720px); // Половина разницы между экраном и 1440px
+      background: $second-bg;
+      z-index: 0;
     }
   }
 }
@@ -64,13 +84,13 @@
   @media (min-width: $tablet) {
     font-size: 16px;
     line-height: 24px;
-    padding: 0 30px 55px;
+    padding: 0 30px 54px;
   }
 
   @media (min-width: $desktop) {
     padding: 70px 10px 69px 0;
     margin: 0;
-    max-width: 436px;
+    max-width: 442px;
   }
 }
 
@@ -79,4 +99,8 @@
   flex-wrap: wrap;
   gap: 32px;
   justify-content: left;
+
+  @media (min-width: $tablet) {
+    gap: 43px;
+  }
 }
