--- a/source/styles/blocks/features-card.scss
+++ b/source/styles/blocks/features-card.scss
@@ -11,13 +11,14 @@
 
     @media (max-width: 770px) {
       min-width: 240px;
+      margin-right: 50px;
     }
 
     &::after {
       content: ""counter(item) "";
       position: absolute;
-      right: -10px;
-      top: 3%;
+      right: 25px;
+      top: 0;
       font-size: 280px;
       line-height: 280px;
       font-family: $title-font;
@@ -28,8 +29,13 @@
   }
 
   @media (min-width: $desktop) {
+    min-width: 243px;
     width: min-content;
     min-height: 280px;
+
+    &::after {
+      right: -8px;
+    }
   }
 }
 
@@ -38,14 +44,15 @@
   padding-left: 80px;
   min-height: 60px;
   margin: 0;
+  padding-top: 5px;
 
   @media (min-width: $tablet) {
     padding-left: 0;
-    padding-top: 111px;
+    padding-top: 95px;
     font-size: 16px;
     line-height: 24px;
     z-index: 2;
-    min-width: 242px;
+    max-width: 242px;
   }
 
   &::before {
@@ -63,7 +70,7 @@
       transform: translateY(0);
       width: 80px;
       height: 80px;
-      top: 0;
+      top: -17px;
     }
   }
 }
