--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  min-width: 320px; // Фиксированная минимальная ширина
+  min-width: 320px;
   max-width: 100%;
   margin: 0 auto;
 }
@@ -14,6 +14,7 @@
 
 .footer__grid {
   @media (min-width: $desktop) {
+    position: relative;
     display: grid;
     grid-template-rows: [row1-start] auto [row2-start] auto [row3-start] auto [row-end];
     grid-template-areas:
@@ -27,9 +28,17 @@
 .footer__map {
   width: 100%;
   object-fit: cover;
+  border: none;
+  display: block;
+  height: 362px;
+
+  @media (min-width: $tablet) {
+    height: 400px;
+  }
 
   @media (min-width: $desktop) {
-    grid-area: top / 1 / row-end / 1; /* Растягиваем на все 3 ряда */
+    position: relative;
+    grid-area: top / 1 / row-end / 1;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -52,7 +61,7 @@
 
   @media (min-width: $desktop) {
     min-height: 169px;
-    padding: 66px 110px;
+    padding: 51px 110px;
   }
 }
 
@@ -72,7 +81,7 @@
   @media (max-width: 767px) {
     width: 128px;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 24px;
     display: flex;
     justify-content: center;
   }
@@ -84,11 +93,11 @@
     top: 0;
     left: 0;
     width: 128px;
-    height: 24px;
-    background-color: #111111; /* Исходный цвет */
+    height: 26px;
+    background-color: #111111;
     mask-image: url("../../images/logo-text.svg");
     mask-repeat: no-repeat;
-    mask-size: 128px 24px;
+    mask-size: 100%;
     transition: background-color 0.3s ease;
   }
 
@@ -109,7 +118,7 @@
     justify-content: center;
     width: 100%;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 17px;
   }
 }
 
