--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -5,13 +5,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 13px 21px 14px 20px;
+  padding: 11px 21px 13px 20px;
 
   @media (min-width: $tablet) {
-    padding: 25px 34px 0 30px;
+    padding: 14px 29px 0 30px;
+    justify-content: left;
+    gap: 89px;
   }
 
-  @media (min-width: $desktop) {
+  @media (min-width: 1440px) {
     display: grid;
     grid-template-columns: 51% auto;
     width: 100%;
@@ -21,46 +23,19 @@
     position: relative;
     overflow: hidden;
     background-color: $text-light;
+    max-width: 1440px;
+    margin: 0 auto;
+    gap: 9px;
   }
 }
 
 .main-header--index {
   @media (min-width: $desktop) {
     background-color: $text-light;
-
-    &::before { // Добавляем новый псевдоэлемент для фона
-      content: "";
-      position: absolute;
-      top: 0;
-      right: 0;
-      height: 100%;
-      width: 50%;
-      background-color: #505155;
-      z-index: 0;
-    }
-
-    // Верхний слой (зеленый градиент + белый)
-    &::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background:
-        linear-gradient(
-          to left,
-          rgba($lighter-primary-bg, 0.85) 50%,
-          $text-light 50%
-        );
-      z-index: 2;
-    }
-  }
-
-  @media (min-width: $desktop) {
     display: grid;
-    grid-template-columns: 51% auto;
+    grid-template-columns: 31% auto;
     width: 100%;
+    justify-content: space-between;
     height: auto;
     min-height: 59px;
     padding: 55px 110px 0;
@@ -126,14 +101,19 @@
       transform: translateY(-50%);
       width: 101px;
       height: 19.5px;
-      background-size: contain;
+      background-size: 100%;
       background-repeat: no-repeat;
       background-position: right;
       background-image: url("../../images/logo-text.svg");
     }
   }
 
+  @media (min-width: $tablet) {
+    padding-top: 11px;
+  }
+
   @media (min-width: $desktop) {
+    padding-top: 2px;
     z-index: 5;
     width: 202px;
     height: 59px;
@@ -179,9 +159,12 @@
 
   @media (min-width: $desktop) {
     width: 100%;
+    max-width: 700px;
     height: auto;
     opacity: 1;
     visibility: visible;
+    padding-left: 111px;
+    padding-top: 18px;
   }
 }
 
