--- a/source/styles/blocks/map.scss
+++ b/source/styles/blocks/map.scss
@@ -1,12 +1,29 @@
 .map {
-  @media (max-width: $desktop) {
+  @media (max-width: 1329px) {
     grid-area: map;
-    height: auto;
   }
 }
 
 .map__image {
-  width: 100%;
+  display: none;
+}
+
+.map__google {
+  border: none;
   display: block;
-  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.map--no-js {
+  .map__google {
+    display: none;
+  }
+
+  .map__image {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
 }
