--- a/source/styles/blocks/navigation.scss
+++ b/source/styles/blocks/navigation.scss
@@ -1,10 +1,7 @@
-/* .navigation {
-
-} */
-
 .navigation__list {
   font-family: $title-font;
-  font-size: 18px;
+  font-size: 20px;
+  line-height: 20px;
   color: $title-color;
   list-style: none;
   text-transform: uppercase;
@@ -12,9 +9,10 @@
   padding: 0;
 
   @media (min-width: $tablet) {
+    font-size: 18px;
     display: flex;
     flex-wrap: wrap;
-    gap: 33px;
+    gap: 23px;
   }
 
   @media (min-width: $desktop) {
@@ -31,8 +29,7 @@
 .navigation__item {
   border-bottom: 1px solid #e6e6e6;
   text-align: center;
-  padding-top: 19px;
-  padding-bottom: 20px;
+  padding: 24px 5px 21px;
 
   &:last-child {
     border-bottom: none;
@@ -40,6 +37,7 @@
 
   @media (min-width: $tablet) {
     border-bottom: none;
+    padding: 19px 5px 0;
   }
 
   @media (min-width: $desktop) {
@@ -81,8 +79,12 @@
     @media (min-width: $tablet) {
       display: inline-block;
       box-shadow: inset 0 -2px 0 $primary-bg; // Зелёная тень для всех страниц
-      padding-bottom: 10px;
-    }  // Главная страница (переопределение)
+      padding-bottom: 14px;
+    }
+
+    @media (min-width: $desktop) {
+      padding-bottom: 15px;
+    } // Главная страница (переопределение)
   }
 
   &--active-light {
