--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -11,7 +11,7 @@
 .page__body--index {
   @media (min-width: $desktop) {
     width: 100%;
-    position: relative; // Добавляем для позиционирования псевдоэлемента
+    position: relative;
     overflow-x: hidden;
 
 
@@ -22,15 +22,32 @@
       right: 0;
       height: 100%;
       max-height: 694px;
-      max-width: 720px;
-      width: 50%;// Ограничиваем ширину
+      width: 50%;
       background:
-        #505155 0%,
+        100% 0/contain no-repeat
         image-set(
-          url("../../images/background-index-desktop 1@1x.jpg") 1x,
-          url("../../images/background-index-desktop 1@2x.jpg") 2x
-        ) 100% 0/contain no-repeat;
+          url("../../images/background-index-desktop 1@1x.webp") 1x,
+          url("../../images/background-index-desktop 1@2x.webp") 2x
+        ),
+        linear-gradient(to right, #505155 100%);
       z-index: 1;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      max-height: 694px;
+      background:
+        linear-gradient(
+          to left,
+          rgba($lighter-primary-bg, 0.85) 50%,
+          transparent 50%
+        );
+      z-index: 2;
     }
   }
 }
