--- a/source/styles/blocks/program-card.scss
+++ b/source/styles/blocks/program-card.scss
@@ -1,6 +1,6 @@
 .program-card {
   background-color: $alt-bg;
-  padding: 30px 20px 18px;
+  padding: 30px 20px 19px;
 
   @media (max-width: 767px) {
     &.program-card--seat .program-card__title::before {
@@ -18,7 +18,7 @@
     &.program-card--ran .program-card__title::before {
       content: "";
       position: absolute;
-      left: -5px;
+      left: -10px;
       top: 50%;
       transform: translateY(-50%);
       width: 67px;
@@ -29,12 +29,12 @@
   }
 
   @media (min-width: $tablet) and (max-width: 1330px) {
-    padding: 77px 316px 53px 52px;
+    padding: 73px 316px 53px 52px;
 
     &.program-card--seat {
       background-image: url("../../icons/stack.svg#cat_back-seat");
       background-size: 200px 211px;
-      background-position: 90% 50%;
+      background-position: 88% 49%;
       background-repeat: no-repeat;
     }
 
@@ -49,7 +49,9 @@
   @media (min-width: $desktop) {
     padding: 41px 61px 55px 52px;
     max-width: 570px;
-    min-height: 374px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 
     &.program-card--seat .program-card__title {
       padding-left: 162px;
@@ -68,13 +70,13 @@
     }
 
     &.program-card--ran .program-card__title {
-      padding-left: 181px;
+      padding-left: 162px;
     }
 
     &.program-card--ran .program-card__title::before {
       content: "";
       position: absolute;
-      left: -5px;
+      left: -18px;
       top: 50%;
       transform: translateY(-50%);
       width: 134px;
@@ -112,21 +114,21 @@
   margin: 0;
 
   @media (max-width: 767px) {
-    padding-top: 22px;
+    padding-top: 28px;
     padding-bottom: 23px;
     line-height: 18px;
     border-bottom: 1px solid #d9d9d9;
   }
 
   @media (min-width: $tablet) {
-    padding-top: 24px;
+    padding-top: 0;
     padding-bottom: 48px;
     font-size: 16px;
     line-height: 24px;
   }
 
   @media (min-width: $desktop) {
-    padding: 34px 0 23px;
+    padding: 38px 0 1px;
     font-size: 16px;
     line-height: 24px;
   }
@@ -139,15 +141,15 @@
   display: inline-flex;
   align-items: center;
   transition: color 0.3s ease;
-  padding-top: 15px;
+  padding-top: 20px;
   padding-right: 36px;
   position: relative;
 
   &::after {
     content: "";
     position: absolute;
-    right: 0;
-    top: 54%;
+    right: -5px;
+    top: 60%;
     width: 24px;
     height: 12px;
     background-image: url("../../icons/stack.svg#arrow");
@@ -166,9 +168,30 @@
 
   @media (max-width: 767px) {
     @include button-styles(16px, 16px);
+    max-width: 125px;
   }
 
   @media (min-width: $tablet) {
     @include button-styles(20px, 20px);
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    &::after {
+      top: 33%;
+      right: -15px;
+    }
+  }
+
+  @media (min-width: $desktop) {
+    padding-top: 1px;
+    margin-top: auto;
+    gap: 25px;
+
+    &::after {
+      position: relative;
+      right: -2px;
+      top: 5%;
+      transform: translateY(-5%);
+    }
   }
 }
